fixed menu on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -35,12 +35,12 @@ footer {
   text-align: center; }
 
 #sidebar {
-  pointer-events: none;
   position: fixed;
   font-family: "courier-prime";
   top: 0;
   left: 0;
-  width: 160px; }
+  width: 160px;
+  height: 0; }
   @media (max-width: 1100px) {
     #sidebar {
       width: 100%; } }
